HTTP_Routing/2.43_HTTPRouteMeta/gw-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: HTTPRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-meta
  namespace: web
  labels:
    poc: httproute-meta
    test-id: "2.43"
  annotations:
    poc.f5bnk.com/test-id: "2.43"
    poc.f5bnk.com/feature: httproute-meta
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - coffee.f5bnk.com

  rules:
    - name: coffee-rule
      matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
